# LineRemoverNN

./: .gitignore  LICENSE  infer.py  main.py  postProcessing.py  pyproject.toml  readme.md  requirements.txt  test.py  train.py
data/: .gitignore  IAM.py  MakeDataSet.py  downloadDataset.py  processBlock.py
models/: .gitignore  loss.py  loss.txt  model.py  test_model.py
models/saved/: epoch-0.pt  epoch-1.pt  epoch-10.pt  epoch-11.pt  epoch-12.pt  epoch-13.pt  epoch-14.pt  epoch-15.pt  epoch-16.pt  epoch-17.pt  epoch-18.pt  epoch-19.pt  epoch-2.pt  epoch-20.pt  epoch-21.pt  epoch-22.pt  epoch-23.pt  epoch-24.pt  epoch-25.pt  epoch-26.pt  epoch-27.pt  epoch-28.pt  epoch-29.pt  epoch-3.pt  epoch-30.pt  epoch-31.pt  epoch-32.pt  epoch-33.pt  epoch-34.pt  epoch-35.pt  epoch-36.pt  epoch-37.pt  epoch-38.pt  epoch-39.pt  epoch-4.pt  epoch-40.pt  epoch-41.pt  epoch-42.pt  epoch-43.pt  epoch-44.pt  (+6 more)
